--- a/custom_components/icloud3/ChangeLog.txt
+++ b/custom_components/icloud3/ChangeLog.txt
@@ -43,3 +43,11 @@ Beta 3 - 12/21/2022
     Page 2. Also added the `Log Level` parameter to the Event Log Configuration screen. This
     will reduce the steps needed to change the Log Level parameter when debug/rawdata logging
     is desired. ---> YOU MAY NEED TO REFRESH YOUR BROWSER WITH THE CONFIGURATOR OPEN <---
+8.  Fixed problem changing the devices Friendly Name that would generate an error message deleting
+    tracking_from_zone sensors when they had not been created. 
+9.  The device_tracker state value is now lower-case.
+10. Log level debug and rawdata records are now written to the '/config/icloud3_debug.log' file
+    instead of the HA log file. A new file is created every time HA starts.
+11. The file extension for the Event Log file was changed from '.txt' to '.log'. The file name is now
+    'icloud3-event-log_[time].log'.
+
