--- a/custom_components/icloud3/ChangeLog.txt
+++ b/custom_components/icloud3/ChangeLog.txt
@@ -1,5 +1,19 @@
-Beta 4 - 12/17/2022
--------------------
+Beta 5 - 12/28/2022
+~~~~~~~~~~~~~~~~~~~~
+1.  Fixed a 'log_info_msg' not defined error message in the routine that identifies the notify
+    service  used for a device. This is just an informative message indicating HA has not set it
+    up yet.
+2.  Periodically, the events currently displayed for a device is reduced from all events to less
+    than a screen. This number was increased from 1/2-screen to about 2-screens.
+3.  When the displayed events for a device were reduced (#2 above), the screen was never refreshed
+    so you would always see the old events and had to do a refresh to see the latest events. Now,
+    the device's events are automatically refreshed when they are updated.
+4.  Updated the Event Log Lovelace card to v3.0.1. This fixes a problem when the date/time should not
+    be displayed if there was an alert message was displayed.
+
+
+Beta 4 - 12/27/2022
+~~~~~~~~~~~~~~~~~~~~
 1.  Inactive/Untracked devices are listed at the end of the Startup Event Log messages.
 2.  Fixed some problems displaying the EVent Log when there were no devices to track.
 3.  Fixed problem dealing with Gb.ic3_debug_log_write_secs variable not found.
@@ -14,23 +28,23 @@ Beta 4 - 12/17/2022
         - If the Log Level is debug or rawdata in the Configurator > Event Log parameters and
           Stop Debug Logging was selected on Event Log > Actions, the configuration will be changed
           to 'info' (no debug logging).
-        - If the configuration is set to 'info' (no debug logging) and it is started on Event Log > Actions,
-          the configuration is not updated and the debug logging will remain on until midnight, the next
-          iCloud3 restart or when it is turned off.
+        - If the configuration is set to 'info' (no debug logging) and it is started on
+          Event Log > Actions, the configuration is not updated and the debug logging will remain
+          on until midnight, the next iCloud3 restart or when it is turned off.
 
 
 QUESTION: Currently the Exported Event Log file contains the date/time indicating when it was created.
           This creates a new file for every export.
                 Example: 'icloud3-event-log_2022-12-26 18:00:00.log'
-          Another option is to not have the date/time in the file name so a new Export overrites the last one.
+          Another option is to not have the date/time in the file name so a new Export overrites
+          the last one.
                 Example: 'icloud3-event-log.log'
 
           Does anyone have an opinion on this.
 
-
-------------------------------------------------------------------------------------------------
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Beta 3 - 12/24/2022
--------------------
+~~~~~~~~~~~~~~~~~~~~
 1.  Fixed a problem where the Configurator > Sensors would generate an 'Unknown Error Ocurred'
     error message. This was caused by an invalid sensor field name ('tracking_from_zones')
     in the configuration file.
@@ -43,8 +57,8 @@ Beta 3 - 12/24/2022
 5.  Added 'Reinitialize All Devices' to the Configurator > iCloud3 Devices screen. With it,
     you can remove all devices from iCloud3 or reset the selections for the iCloud FamShr & FmF
     and the iOS App parameters to `None`. This will clear any errors due to device migration errors.
-6.  Setting up the log_level (info, debug, rawdata) a lot earlier. It is now setup when HA loads iCloud3
-    instead of later. Debug and RawData information should now be written to the HA Log file
+6.  Setting up the log_level (info, debug, rawdata) a lot earlier. It is now setup when HA loads
+    iCloud3 instead of later. Debug and RawData information should now be written to the HA Log file
     (home-assistant.log) when the iCloud Account connection is first established.
 7.  Moved `Event Log Configuration` option to Menu Page 1 and moved `Display Text As` option to Menu
     Page 2. Also added the `Log Level` parameter to the Event Log Configuration screen. This
@@ -55,14 +69,14 @@ Beta 3 - 12/24/2022
 9.  The device_tracker state value is now lower-case.
 10. Log level debug and rawdata records are now written to the '/config/icloud3_debug.log' file
     instead of the HA log file. A new file is created every time HA starts.
-11. The file extension for the Event Log file was changed from '.txt' to '.log'. The file name is now
-    'icloud3-event-log_[time].log'.
+11. The file extension for the Event Log file was changed from '.txt' to '.log'. The file name is
+    now 'icloud3-event-log_[time].log'.
 12. Fixed problem displaying the Event Log when no devices had been configured.
 
 
-------------------------------------------------------------------------------------------------
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Beta 2 - 12/17/2022
--------------------
+~~~~~~~~~~~~~~~~~~~~
 1.  Do not display an error messgage when trying to get the model of a device if t is
     not in the HA device registry. (entity_io:137)
 2.  Fix a problem checking if info for all of configured devices that had been set
@@ -80,7 +94,7 @@ Beta 2 - 12/17/2022
 7.  Reformatted the items written to the icloud3_migration.log file for clarity.
 8.  Fixed a problem shrinking the Event Log (event_log:538 recursion error).
 9.  Fixed a problem when Family Sharing info from iCloud Location Services had not completely
-    loaded during initialization and was generating an error during the retry operation (start_ic3:1113).
-10. Fixed a problem, hopefully, that was generating the HA Blocking error when starting up the iCloud
-    Location Services interface. This was also occurring (sometimes) when logging into a new the iCloud
-    account from the Configurator.
+    loaded during initialization and was generating an error during the retry operation.
+10. Fixed a problem, hopefully, that was generating the HA Blocking error when starting up the
+    iCloud Location Services interface. This was also occurring (sometimes) when logging into a new
+    the iCloud ccount from the Configurator.
