--- a/custom_components/icloud3/translations/en.json
+++ b/custom_components/icloud3/translations/en.json
@@ -54,6 +54,9 @@
       "not_numeric": "The value entered is not numeric",
       "stat_zone_base_lat_range_error": "The value must be between -90 and 90",
       "stat_zone_base_long_range_error": "The value must be between -180 and 180",
+      "waze_server_error_us": "The correct server for your location is: United States, Canada",
+      "waze_server_error_il": "The correct server for your location is: Isreal",
+      "waze_server_error_row": "The correct server for your location is: Rest of the World",
       "required_field": "This parameter must be specified",
       "required_field_device": "At least one device (Family Share List, Find-my-Friends, iOS App device must be specified",
       "unknown_devicename": "The device that was previously selected can no longer be identified. It`s name may have been changed or it may have been deleted. Reselect the device to be tracked or monitored",
@@ -235,52 +238,44 @@
       },
       "waze_main": {
         "data": {
-          "waze_used": "USE WAZE ROUTE SERVICE - Request zone distance and travel time from Waze Route Service",
+          "waze_used": "═══════════════ WAZE ROUTE SERVICE ════════════════",
           "waze_region": "ROUTE SERVER LOCATION - Location of the Waze Route Server for your area",
           "waze_realtime": "USE REAL TIME DATA - Waze should consider traffic delays when determining travel time",
           "waze_min_distance": "WAZE MINIMUM DISTANCE - Use Waze Route Service when the zone distance is greater than this value",
-          "waze_max_distance": "WAZE MAXIMUM DISTANCE - Use Waze Route Service when the zone distance is less than than this value",
-          "opt_action": "═════════════════════════════════════════════════════"
-        },
-        "data_description": {
-        },
-        "description": "The Waze Reoute Servers can provide travel time/distance data to determine the next location request time. If Waze is not available in your area, a straight-line/calculation method can be used instead.",
 
-        "title": "Waze - Route Service Travel Time/Distance"
-      },
-      "waze_history_db": {
-        "data": {
-          "waze_history_database_used": "WAZE HISTORY - Save Waze Route Info to the Waze History Database",
+          "waze_max_distance": "WAZE MAXIMUM DISTANCE - Use Waze Route Service when the zone distance is less than than this value",
+          "waze_history_database_used": "══════════════ WAZE HISTORY DATABASE ══════════════",
           "waze_history_track_direction": "GENERAL TRAVEL DIRECTION - Used to display 'Map Trace Lines' between saved locations",
           "waze_history_max_distance": "MAX DISTANCE - Do not save the Waze travel time & distance if the distance is greater than this value",
           "opt_action": "═════════════════════════════════════════════════════"
         },
         "data_description": {
+          "waze_used": "USE WAZE ROUTE SERVICE -The Waze Route Service provides the travel time and distance information from your current location to the Home or another tracked from zone.",
+          "waze_history_database_used": "WAZE HISTORY - The Waze History Data base stores 'close to zone' travel time/distance information for a GPS location (100m radius). It reduces the number of internet requests to the Waze Servers after it has been in use for a while."
         },
-        "description": "The Waze History Data base stores 'close to zone' travel time/distance information for a GPS location (100m radius). It reduces the number of internet requests to the Waze Servers after it has been in use for a while.",
-        "title": "Waze - History Database"
+        "title": "Waze - Route Service Travel Time/Distance"
       },
       "special_zones": {
         "data": {
-          "passthru_zone_header":   "════════════ PASS THROUGH ZONE ═════════════",
-          "track_from_zone_header": "═════════════ TRACK FROM ZONE ═════════════",
-          "stat_zone_header":       "════════════ STATIONARY ZONE ══════════════",
-          "base_offset_header":     "══════════ STATIONARY ZONE BASE LOCATION ════════",
+          "passthru_zone_header":   "════════════════ PASS THROUGH ZONE ════════════════",
           "passthru_zone_time": "ENTER ZONE DELAY TIME - Delay processing a Zone Enter Trigger in case you are passing thru a zone",
+          "track_from_zone_header": "════════════ PRIMARY BASE ZONE = HOME ═════════════",
           "track_from_base_zone": "PRIMARY 'HOME' ZONE - Use another zone if you are away from Home for an extended period (Global Override)",
           "track_from_home_zone": "ALSO TRACK FROM HOME ZONE - Continue to track from the Home zone when the Primary Home Zone is not Home",
+          "stat_zone_header":       "════════════════ STATIONARY ZONE ══════════════════",
           "stat_zone_fname": "FRIENDLY NAME - Name to display when in a Stat Zone. ",
           "stat_zone_still_time": "NO MOVEMENT TIME - Time at the same location before moving into a Stationary Zone",
           "stat_zone_inzone_interval": "INZONE INTERVAL - Time interval between location requests when in a Stationary Zone",
+          "base_offset_header":     "══════════ STATIONARY ZONE BASE LOCATION ════════",
           "stat_zone_base_latitude": "BASE LOCATION NORTH-SOUTH OFFSET - Dist (±km) north-south of the Home Zone (or it's GPS Latitude)",
           "stat_zone_base_longitude": "BASE LOCATION EAST/WEST OFFSET - Dist (±km) east-west of the Home Zone (or it's GPS Longitude)",
-          "opt_action": "═════════════════════════════════════════════════════"
+          "opt_action":             "═════════════════════════════════════════════════════"
         },
         "data_description": {
-          "stat_zone_fname": "Use the wildcard '[name]' to also display part of the device name ('[name]StatZone' --> 'GarStatZone')",
-          "track_from_base_zone": "Normally, the Home zone is used as the base location for all tracking (travel time, distance, etc).  However, a different zone can be used as the base location if you are away from Home for an extended period or the device is normally at another location (vacation house, second home, parent's house, etc.). This is a global setting that overrides the Base Zone assigned to an individual Device.",
           "passthru_zone_header": "You may be driving through a non-tracked zone but not stopping at tne zone. The iOS App issues a Enter Zone trigger when the device enters the zone and changes the device_tracker entity state to the Zone. iCloud3 does not process the Enter Zone trigger until the delay time has passed. This prevents processing a Zone Enter trigger that is immediately followed by a Zone Exit trigger and from cycling the iCloud3 device_tracker and zone sensors from Away (not_home) to the Zone and then back to Away",
+          "track_from_zone_header": "Normally, the Home zone is used as the base location for all tracking (travel time, distance, etc).  However, a different zone can be used as the base location if you are away from Home for an extended period or the device is normally at another location (vacation house, second home, parent's house, etc.). This is a global setting that overrides the Base Zone assigned to an individual Device.",
           "stat_zone_header": "A Stationary Zone is created if the device remains in the same location (store, friends house, doctors office, etc.) for an extended period of time.",
+          "stat_zone_fname": "Use the wildcard '[name]' to also display part of the device name ('[name]StatZone' --> 'GarStatZone')",
           "base_offset_header": "The Stationary Zone is moved to it's 'Base Location' when it is not used by the device. This prevents the iOS App from moving the device into the Stationary Zone when it shouldn`t and helps prevent it from overlapping other zones"
         },
         "title": "Special Zones - Pass Through, Track From, Stationary"
