--- a/custom_components/icloud3/translations/en.json
+++ b/custom_components/icloud3/translations/en.json
@@ -161,12 +161,14 @@
         "data": {
           "log_level": "LOG LEVEL - The type of messages that are added to the HA log file by iCloud3",
           "display_zone_format": "ZONE NAME FORMAT - Format used to display the Zone name in sensors and the Event Log",
+          "zone_sensor_evlog_format": "DEVICE TRACKER STATE/ZONE FORMAT OVERRIDE - Display the Formatted Zone Name in the device_tracker entity",
           "time_format": "TIME FORMAT - Time format for sensors and the Event Log",
           "unit_of_measurement": "UNIT OF MEASUREMENT - Distance format for sensors and the Event Log",
           "event_log_card_directory": "EVENT LOG CARD LOVELACE RESOURCES DIRECTORY - Event Log custom card .js file directory",
           "opt_action": "═════════════════════════════════════════════════════"
         },
         "data_description": {
+          "zone_sensor_evlog_format": "The HA entity value standard is to display the state value in lower_case with underscores ('_'). This overides that standard and displays the Zone Name Format selected above"
         },
         "title": "Event Log Configuration"
       },
@@ -198,6 +200,7 @@
           "log_level": "LOG LEVEL - The type of messages that are added to the HA log file during iCloud3 operations",
           "gps_accuracy_threshold": "GPS ACCURACY THRESHOLD - Locations with GPS Accuracy above this value will be discarded",
           "old_location_threshold": "OLD LOCATION THRESHOLD - Locations older than this value will be discarded",
+          "old_location_adjustment": "OLD LOCATION ADJUSTMENT - Add this to the time that determines if a location is old",
           "max_interval": "MAXIMUM INTERVAL - The maximum time between location requests",
           "tfz_tracking_max_distance": "TRACK-FROM-ZONE DISPLAY DISTANCE - TfZ Time & dist is displayed  when close to the TfZ zone",
           "offline_interval": "DEVICE OFFLINE INTERVAL - Location request interval when offline (Airplane mode, dead cell area, etc)",
@@ -217,6 +220,7 @@
           "no_iosapp": "IOS APP IS NOT INSTALLED - Default interval if the iOS App is not used for location monitoring and zone enter/exit triggers",
           "other": "OTHER DEVICE TYPE - Unspecified device type inzone interval",
           "discard_poor_gps_inzone": "Discard Location Updates with Poor GPS Accuracy when in a Zone",
+          "distance_between_devices": "Determine the distance between devices. Use a near by device's tracking results",
           "center_in_zone": "Change Device's Location to the Zone's Center when in a Zone",
           "opt_action": "═════════════════════════════════════════════════════"
         },
